<resources>
    <string name="app_name">MCare</string>
    <string name="app_hint_email">Email</string>
    <string name="exception_usuario_logado">Impossível recuperar usuário logado</string>
    <string name="app_hint_password">Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="msg">Mensagem do dialog</string>
    <string name="signin">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="exception_usuario_invalido">Usuário inválido</string>
    <string name="exception_campo_obrigatorio">Preencha os campos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="acessar">Acessar</string>
    <string name="exception_email_invalido">Email Inválido</string>
    <string name="sair">Sair</string>
    <string name="busca">Busca</string>
    <string name="autenticando">Autenticando</string>
    <string name="title_activity_medico_form">Médico Cadastro</string>
    <string name="action_settings">Settings</string>
    <string name="crm">CRM</string>
    <string name="app_conta_criar_agora">Cadastrar-se</string>
    <string name="especialidade">Especialidades</string>
    <string name="descricao">Descrição</string>
    <string name="registro_salvo">Registro Salvo com sucesso!</string>
    <string name="resultado_encontrado">Resultado(s) encontrado(s)!</string>
    <string name="item_removido">Item Removido</string>
    <string name="add_medico">Médico</string>
    <string name="especialiades">Especialidades</string>
    <string name="medicos">Médicos</string>
    <string name="contato">Contato</string>
    <string name="nao">NAO</string>
    <string name="sim">SIM</string>
    <string name="deseja_deletar">Deseja deletar</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="ir">Ir</string>
    <string name="title_activity_medico_detalhe">MedicoDetalheActivity</string>
    <string name="add_clinica">Clínica</string>
    <string name="clinicas">Clínicas</string>
    <string name="inconsistencia">Incosistência:</string>
    <string name="data_da_consulta">Data da Consulta</string>
    <string name="hor_rio_da_consulta">Horário da Consulta</string>
    <string name="marcar_consulta">Agendar Consulta</string>
    <string name="adicionar_especialidade">Adicionar Especialidade</string>
    <string name="adicionar_resultado">Adicionar Resultado</string>
    <string name="adicionar_exame">Adicionar Exame</string>
    <string name="sobre_o_exame">Sobre o exame</string>
    <string name="add_exame">Adicionar Exame</string>
    <string name="add_resultado">Adicionar Resultado</string>
    <string name="tipo_exame">Tipo Exame</string>
    <string name="data_exame">Data do Exame</string>
    <string name="valor_obtido">Val.Obtido</string>
    <string name="valor_referencia">Val.Referência</string>
    <string name="descri_o_resul">Descrição</string>
    <string name="resultado_do_exame">Resultado do Exame</string>
    <string name="resultado">Resultado</string>
    <string name="inserir_resultado">Inserir Resultado</string>

</resources>
