<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_editar"
        android:icon="@drawable/ic_add"
        android:title="@string/editar" />
    <item
        android:id="@+id/item_deletar"
        android:icon="@drawable/ic_add"
        android:title="@string/deletar" />
    <item
        android:id="@+id/item_marcar_consulta"
        android:icon="@drawable/ic_consulta"
        android:title="@string/marcar_consulta"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/item_adicionar_especialidade"
        android:icon="@drawable/ic_consulta"
        android:title="@string/adicionar_especialidade"
        app:showAsAction="collapseActionView"/>
</menu>