<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

             <EditText
                 android:id="@+id/edit_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nome"
                 android:layout_marginTop="@dimen/txt_margin_top"
                 android:maxLength="100"
                 android:layout_marginBottom="@dimen/txt_margin_bottom"/>

             <EditText
                 android:id="@+id/edit_crm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/crm"
                 android:maxLength="8"
                 android:layout_marginTop="@dimen/txt_margin_top"
                 android:layout_marginBottom="@dimen/txt_margin_bottom"/>

             <EditText
                 android:id="@+id/edit_contato"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/contato"
                 android:inputType="phone"
                 android:layout_marginTop="@dimen/txt_margin_top"
                 android:layout_marginBottom="@dimen/txt_margin_bottom"/>
     </LinearLayout>


</ScrollView>

