<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.marcelo.mcare.app.ConsultaFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_tipo_exame"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/descricao" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/data_exame"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/data_exame"
                    android:inputType="date" />
                <ImageButton
                    android:id="@+id/btn_datapicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_calendar"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_nota"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/sobre_o_exame"
                android:inputType="textMultiLine" />

        </LinearLayout>




    </ScrollView>

</android.support.constraint.ConstraintLayout>
