<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.marcelo.mcare.app.ResultadoDetalheActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tabela_resultado"
            android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/TextView00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/resultado_do_exame"
                    android:layout_span="3"
                    android:padding="18dip"
                    android:background="@color/colorLightTheme"
                    android:textColor="#000"/>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/txt_descricao"
                    android:layout_weight="2"
                    android:padding="18dip"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txt_data"
                    android:layout_weight="1"
                    android:padding="18dip"
                    android:textSize="12sp"
                    android:gravity="center"/>
            </TableRow>


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/TextView03"
                    android:text="@string/descri_o_resul"
                    android:layout_weight="2"
                    android:background="#ddd"
                    android:padding="10dp"
                    android:gravity="left"/>

                <TextView
                    android:id="@+id/TextView04"
                    android:text="@string/valor_obtido"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:padding="10dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/TextView05"
                    android:text="@string/valor_referencia"
                    android:layout_weight="1"
                    android:background="#ddd"
                    android:padding="10dp"
                    android:gravity="center"/>
            </TableRow>


        </TableLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
